Styles: fix the user navigation vertical alignment

--- a/src/modules/pages/components/RouteLayouts/UserNavigation.css
+++ b/src/modules/pages/components/RouteLayouts/UserNavigation.css
@@ -97,7 +97,8 @@
 }
 
 .walletAddress {
-  padding: 2px 9px 3px;
+  margin: 0 2px;
+  padding: 0 9px;
 
   /*
    * @NOTE We need to do border sizing shenanigans due to how the border color
@@ -109,12 +110,19 @@
    * active class (the one that has a different colored border), we remove the extra padding
    * and set the border
    */
-  height: 100%;
+  height: 22px;
+  position: relative;
+  top: -0.1px;
   border: none;
   border-radius: var(--radius-normal);
   background-color: color-mod(var(--temp-grey-blue-7) alpha(10%));
   color: var(--temp-grey-blue-7);
   cursor: pointer;
+}
+
+.walletAddress > span {
+  position: relative;
+  top: -0.5px;
 }
 
 .walletAddress:hover {
@@ -131,7 +139,6 @@
 
 .buttonsWrapper {
   margin-right: 12px;
-  padding: 2px;
   height: 26px;
   position: relative;
   border-radius: var(--radius-normal);
