--- a/src/modules/users/components/UserTokenActivationButton/UserTokenActivationButton.css
+++ b/src/modules/users/components/UserTokenActivationButton/UserTokenActivationButton.css
@@ -1,6 +1,8 @@
 .tokens {
-  padding: 2px 8px 3px;
-  height: 100%;
+  padding: 0 8px;
+  height: 26px;
+  position: relative;
+  top: -0.1px;
   border: none;
   border-radius: var(--radius-normal);
   background: transparent;
@@ -11,7 +13,6 @@
 }
 
 .tokens:hover {
-  position: relative;
   z-index: 5;
   background-color: rgb(217, 216, 236);
   color: var(--colony-blue);
